[gd_scene load_steps=45 format=2]

[ext_resource path="res://fonts/lemon_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://ButtonNormal.tres" type="StyleBox" id=2]
[ext_resource path="res://ButtonPressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Lose1Scene.gd" type="Script" id=4]
[ext_resource path="res://screens/06_lose1b.png" type="Texture" id=5]
[ext_resource path="res://screens/05_lose1a.png" type="Texture" id=6]
[ext_resource path="res://assets/scratches_animation/scratches06.png" type="Texture" id=7]
[ext_resource path="res://assets/scratches_animation/scratches09.png" type="Texture" id=8]
[ext_resource path="res://assets/scratches_animation/scratches10.png" type="Texture" id=9]
[ext_resource path="res://assets/scratches_animation/scratches07.png" type="Texture" id=10]
[ext_resource path="res://assets/scratches_animation/scratches15.png" type="Texture" id=11]
[ext_resource path="res://assets/scratches_animation/scratches12.png" type="Texture" id=12]
[ext_resource path="res://assets/scratches_animation/scratches13.png" type="Texture" id=13]
[ext_resource path="res://assets/scratches_animation/scratches18.png" type="Texture" id=14]
[ext_resource path="res://assets/scratches_animation/scratches11.png" type="Texture" id=15]
[ext_resource path="res://assets/scratches_animation/scratches20.png" type="Texture" id=16]
[ext_resource path="res://assets/scratches_animation/scratches14.png" type="Texture" id=17]
[ext_resource path="res://assets/layer_dirt.png" type="Texture" id=18]
[ext_resource path="res://assets/scratches_animation/scratches16.png" type="Texture" id=19]
[ext_resource path="res://assets/scratches_animation/scratches17.png" type="Texture" id=20]
[ext_resource path="res://assets/scratches_animation/scratches19.png" type="Texture" id=21]
[ext_resource path="res://assets/scratches_animation/scratches22.png" type="Texture" id=22]
[ext_resource path="res://assets/scratches_animation/scratches23.png" type="Texture" id=23]
[ext_resource path="res://assets/scratches_animation/scratches08.png" type="Texture" id=24]
[ext_resource path="res://assets/scratches_animation/scratches21.png" type="Texture" id=25]
[ext_resource path="res://assets/scratches_animation/scratches00.png" type="Texture" id=26]
[ext_resource path="res://assets/scratches_animation/scratches01.png" type="Texture" id=27]
[ext_resource path="res://assets/scratches_animation/scratches02.png" type="Texture" id=28]
[ext_resource path="res://assets/scratches_animation/scratches03.png" type="Texture" id=29]
[ext_resource path="res://assets/scratches_animation/scratches04.png" type="Texture" id=30]
[ext_resource path="res://assets/scratches_animation/scratches05.png" type="Texture" id=31]
[ext_resource path="res://assets/button_right.png" type="Texture" id=32]
[ext_resource path="res://audio/scene_lose.wav" type="AudioStream" id=33]
[ext_resource path="res://assets/button_left.png" type="Texture" id=34]
[ext_resource path="res://assets/button_middle.png" type="Texture" id=35]
[ext_resource path="res://fonts/Lemon-Regular.ttf" type="DynamicFontData" id=36]
[ext_resource path="res://audio/door_close.wav" type="AudioStream" id=37]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "lose1_scene_2",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "lose1_scene_1",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 56
outline_size = 7
outline_color = Color( 0.145098, 0.133333, 0.133333, 1 )
use_filter = true
font_data = ExtResource( 36 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 3

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 24 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "scratches",
"speed": 12.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "door"
length = 0.625
step = 0.125
tracks/0/type = "audio"
tracks/0/path = NodePath("PlayerScene/AudioScene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 37 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "sound"
length = 3.75
step = 0.125
tracks/0/type = "audio"
tracks/0/path = NodePath("PlayerScene/AudioScene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 33 )
} ],
"times": PoolRealArray( 0.25 )
}

[node name="Lose1Scene" type="Node2D"]
script = ExtResource( 4 )

[node name="Lose1SceneBkg" type="AnimatedSprite" parent="."]
position = Vector2( 961, 540 )
frames = SubResource( 1 )
animation = "lose1_scene_1"

[node name="ButtonLeft" type="Sprite" parent="Lose1SceneBkg"]
position = Vector2( -580, 362.804 )
scale = Vector2( 0.373494, 0.559242 )
texture = ExtResource( 34 )
offset = Vector2( 95, 134.461 )

[node name="ButtonMiddle" type="Sprite" parent="Lose1SceneBkg"]
position = Vector2( -625.604, 363.645 )
scale = Vector2( 1.14828, 0.558685 )
texture = ExtResource( 35 )
offset = Vector2( 282.47, 133.984 )

[node name="ButtonRight" type="Sprite" parent="Lose1SceneBkg"]
position = Vector2( -632.5, 363.941 )
scale = Vector2( 0.884615, 0.554502 )
texture = ExtResource( 32 )
offset = Vector2( 635.87, 134.461 )

[node name="ButtonLeft2" type="Sprite" parent="Lose1SceneBkg"]
position = Vector2( -14, 362.804 )
scale = Vector2( 0.373494, 0.559242 )
texture = ExtResource( 34 )
offset = Vector2( 95, 134.461 )

[node name="ButtonMiddle2" type="Sprite" parent="Lose1SceneBkg"]
position = Vector2( -59.6035, 363.645 )
scale = Vector2( 1.14828, 0.558685 )
texture = ExtResource( 35 )
offset = Vector2( 282.47, 133.984 )

[node name="ButtonRight2" type="Sprite" parent="Lose1SceneBkg"]
position = Vector2( -66.4999, 363.941 )
scale = Vector2( 0.884615, 0.554502 )
texture = ExtResource( 32 )
offset = Vector2( 635.87, 134.461 )

[node name="EndingText" type="RichTextLabel" parent="."]
margin_left = 3.0
margin_top = 809.0
margin_right = 1920.0
margin_bottom = 902.0
rect_pivot_offset = Vector2( 1525, -335 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Esto es lo que les pasa a las gatitas traviesas…[/center]"
text = "Esto es lo que les pasa a las gatitas traviesas…"
override_selected_font_color = true

[node name="ButtonReplay" type="Button" parent="."]
margin_left = 410.0
margin_top = 930.0
margin_right = 915.0
margin_bottom = 1028.0
rect_pivot_offset = Vector2( 267, 79 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Volver a jugar"

[node name="ButtonCredits" type="Button" parent="."]
margin_left = 975.0
margin_top = 930.0
margin_right = 1479.0
margin_bottom = 1031.0
rect_pivot_offset = Vector2( 267, 79 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Finalizar juego"

[node name="OverlayDirt" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 960, 540 )
texture = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="OverlayScratches" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( 960, 540 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "scratches"
frame = 3
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerScene" type="AnimationPlayer" parent="."]
autoplay = "sound"
anims/door = SubResource( 7 )
anims/sound = SubResource( 5 )

[node name="AudioScene" type="AudioStreamPlayer" parent="PlayerScene"]
stream = ExtResource( 37 )
volume_db = 10.0

[connection signal="pressed" from="ButtonReplay" to="." method="_on_ButtonReplay_pressed"]
[connection signal="pressed" from="ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
